# Talys-code

./: .gitignore  CMakeLists.txt  LOG  LOG-1.9  README  README.md  talys.setup
source/: BUenhance.f  angleout.f  barsierk.f  binary.f  breakup.f  breakupAVR.f  cascade.f  channels.f  channelsout.f  checkkeyword.f  checkvalue.f  compnorm.f  compound.f  comptarget.f  convert.f  ddxout.f  densitymatch.f  densityout.f  densitypar.f  densitytable.f  densprepare.f  directread.f  endfinfo.f  endfread.f  energies.f  excitation.f  exgrid.f  ffevap.f  finalout.f  fissionout.f  fissionpar.f  fissionparout.f  foldalpha.f  fstrength.f  gammadecay.f  gammaout.f  gammapar.f  gammaxs.f  gef.cmb  gefsub.f  (+73 more)
test/: Kr.tab  Kr.tab_prt  Kr.tab_trunc  energies.txt  input.txt  simple.txt  talys_E1.txt  talys_M1.txt
